{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 13,
  "lineage": "5bd85c17-9d43-6b12-1059-37b394f2e28f",
  "resources": [
    {
      "module": "module.ec2_instances_angular",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3f2cef1fc7d0edb",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-059cde08fb02b4bd3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059cde08fb02b4bd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kuikvengers_Mammar",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b97522e822f955d"
              }
            ],
            "primary_network_interface_id": "eni-08b97522e822f955d",
            "private_dns": "ip-10-0-111-206.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.111.206",
            "public_ip": "15.237.193.230",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0165cc70f476de148",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025e0c1aa9e00d3e4",
            "tags": {
              "Name": "Mammar-EC2-Angular"
            },
            "tags_all": {
              "Name": "Mammar-EC2-Angular"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1bb3e4f06ee2f75"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-059cde08fb02b4bd3",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2_instances_angular.data.aws_ami.amazon_linux_latest",
            "module.ec2_instances_angular.data.aws_ami.ubuntu_latest",
            "module.ec2_instances_angular.data.aws_key_pair.cle-kuikvengers-Mammar",
            "module.security_public.aws_security_group.this",
            "module.subnet_public.aws_subnet.this",
            "module.subnet_public.data.aws_availability_zones.available",
            "module.subnet_public.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances_nginx",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-003db334c07d8c170",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-039800e9c8be8358f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039800e9c8be8358f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kuikvengers_Mammar",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-011b7fb88d5c5bceb"
              }
            ],
            "primary_network_interface_id": "eni-011b7fb88d5c5bceb",
            "private_dns": "ip-10-0-222-35.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.222.35",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06170f21241bc020b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6e5b057477a72e7",
            "tags": {
              "Name": "Mammar-EC2-Nginx"
            },
            "tags_all": {
              "Name": "Mammar-EC2-Nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066b2b6b1c2af46e8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-039800e9c8be8358f",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2_instances_nginx.data.aws_ami.amazon_linux_latest",
            "module.ec2_instances_nginx.data.aws_ami.ubuntu_latest",
            "module.ec2_instances_nginx.data.aws_key_pair.cle-kuikvengers-Mammar",
            "module.security_private.aws_security_group.this",
            "module.subnet_private.aws_subnet.this",
            "module.subnet_private.data.aws_availability_zones.available",
            "module.subnet_private.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.security_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:security-group/sg-066b2b6b1c2af46e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066b2b6b1c2af46e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.111.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.111.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.111.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251228162913259600000006",
            "name_prefix": "terraform-",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mammar-privee-sg"
            },
            "tags_all": {
              "Name": "Mammar-privee-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-066b2b6b1c2af46e8",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "module": "module.security_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:security-group/sg-0d1bb3e4f06ee2f75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1bb3e4f06ee2f75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251228162913250700000005",
            "name_prefix": "terraform-",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mammar-publique-sg"
            },
            "tags_all": {
              "Name": "Mammar-publique-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-0d1bb3e4f06ee2f75",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:internet-gateway/igw-0154d476ede06bf31",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0e2057eab81a540b2"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0e2057eab81a540b2"
                ]
              }
            ],
            "id": "igw-0154d476ede06bf31",
            "internet_gateway_id": "igw-0154d476ede06bf31",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "kuikvengers_igw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "data",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8d1b97413d61a5",
            "association_id": "eipassoc-05465bca40c695210",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kuikvengers_NAT_GeneralUse"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0e2057eab81a540b2"
                ]
              }
            ],
            "id": "nat-00fa65c5b50cd99d6",
            "network_interface_id": "eni-08dad6fec94df8af1",
            "private_ip": "10.0.101.237",
            "public_ip": "15.188.130.140",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "state": "available",
            "subnet_id": "subnet-0176f894291e1b224",
            "tags": {
              "Name": "kuikvengers_NAT_GeneralUse"
            },
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-kuikvengers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:vpc/vpc-0e2057eab81a540b2",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0709e15dbfa27ba41",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06a98459dce0caec1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2057eab81a540b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06c4c5915c1bf8a3c",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "kuikvengers_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mammar-Policy-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:route-table/rtb-08f5d3d885d3582e8",
            "id": "rtb-08f5d3d885d3582e8",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154d476ede06bf31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mammar-public-route"
            },
            "tags_all": {
              "Name": "Mammar-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtb-08f5d3d885d3582e8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_private.data.aws_internet_gateway.igw",
            "module.subnet_private.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mammar-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:route-table/rtb-097fe2eb45fbd0728",
            "id": "rtb-097fe2eb45fbd0728",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fa65c5b50cd99d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mammar-private-route"
            },
            "tags_all": {
              "Name": "Mammar-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtb-097fe2eb45fbd0728",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_private.data.aws_nat_gateway.nat-gateway",
            "module.subnet_private.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a5267f38b0f1d4e",
            "region": "eu-west-3",
            "route_table_id": "rtb-097fe2eb45fbd0728",
            "subnet_id": "subnet-0f6e5b057477a72e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_private.aws_route_table.Mammar-Policy-public",
            "module.subnet_private.aws_route_table.Mammar-private-rt",
            "module.subnet_private.aws_subnet.this",
            "module.subnet_private.data.aws_availability_zones.available",
            "module.subnet_private.data.aws_internet_gateway.igw",
            "module.subnet_private.data.aws_nat_gateway.nat-gateway",
            "module.subnet_private.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:subnet/subnet-0f6e5b057477a72e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.222.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e5b057477a72e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "Mammar-private-subnet"
            },
            "tags_all": {
              "Name": "Mammar-private-subnet"
            },
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "subnet-0f6e5b057477a72e7",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_private.data.aws_availability_zones.available",
            "module.subnet_private.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:internet-gateway/igw-0154d476ede06bf31",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0e2057eab81a540b2"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0e2057eab81a540b2"
                ]
              }
            ],
            "id": "igw-0154d476ede06bf31",
            "internet_gateway_id": "igw-0154d476ede06bf31",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "kuikvengers_igw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "data",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8d1b97413d61a5",
            "association_id": "eipassoc-05465bca40c695210",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kuikvengers_NAT_GeneralUse"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0e2057eab81a540b2"
                ]
              }
            ],
            "id": "nat-00fa65c5b50cd99d6",
            "network_interface_id": "eni-08dad6fec94df8af1",
            "private_ip": "10.0.101.237",
            "public_ip": "15.188.130.140",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "state": "available",
            "subnet_id": "subnet-0176f894291e1b224",
            "tags": {
              "Name": "kuikvengers_NAT_GeneralUse"
            },
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-kuikvengers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:vpc/vpc-0e2057eab81a540b2",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0709e15dbfa27ba41",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06a98459dce0caec1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2057eab81a540b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06c4c5915c1bf8a3c",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "kuikvengers_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mammar-Policy-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:route-table/rtb-0e4edf53115989444",
            "id": "rtb-0e4edf53115989444",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154d476ede06bf31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mammar-public-route"
            },
            "tags_all": {
              "Name": "Mammar-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtb-0e4edf53115989444",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_public.data.aws_internet_gateway.igw",
            "module.subnet_public.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mammar-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:route-table/rtb-0782d96861ade9d07",
            "id": "rtb-0782d96861ade9d07",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fa65c5b50cd99d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mammar-private-route"
            },
            "tags_all": {
              "Name": "Mammar-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtb-0782d96861ade9d07",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_public.data.aws_nat_gateway.nat-gateway",
            "module.subnet_public.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fe2043fee311856",
            "region": "eu-west-3",
            "route_table_id": "rtb-0e4edf53115989444",
            "subnet_id": "subnet-025e0c1aa9e00d3e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_public.aws_route_table.Mammar-Policy-public",
            "module.subnet_public.aws_route_table.Mammar-private-rt",
            "module.subnet_public.aws_subnet.this",
            "module.subnet_public.data.aws_availability_zones.available",
            "module.subnet_public.data.aws_internet_gateway.igw",
            "module.subnet_public.data.aws_nat_gateway.nat-gateway",
            "module.subnet_public.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:subnet/subnet-025e0c1aa9e00d3e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e0c1aa9e00d3e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "Mammar-public-subnet"
            },
            "tags_all": {
              "Name": "Mammar-public-subnet"
            },
            "vpc_id": "vpc-0e2057eab81a540b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "subnet-025e0c1aa9e00d3e4",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.subnet_public.data.aws_availability_zones.available",
            "module.subnet_public.data.aws_vpc.vpc-kuikvengers"
          ]
        }
      ]
    }
  ]
}